typescript out/get appOnScreen

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
     Author:  Promineo Tech Academic Team
     Subject: React Router Boiler Plate
   ------------------------------------------->
+  <!--building on this one-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -19,7 +20,7 @@
    
     <!-- Took out %PUBLIC_URL%/manifest.json<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- Took out %PUBLIC_URL%/logo192.png<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />   -->
-    
+    <!--Took out %PUBLIC_URL% from /favicon.ico-->
 
     <title>React App</title>
   </head>
@@ -30,8 +31,8 @@
     
       <script type="module" src="/src/index.html"></script>
       <!-- changed index.jsx to html -->
-    </body>
-
+<!--removed </body> end step 5 from freecodecamp.org/news/how-to-migrate-from-create-react-app-to-vite/
+  asked to add the above script-->
     <!-- <div id="root"> -->
       <!-- your entire app is in here -->
     </div>
